# community-organisation

./: .buildinfo  .gitignore  README.md  faq.html  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: conference.md  documentation.md  idea.md  new-event.md
.github/workflows/: build-gh-pages.yml
_sources/sub_pages/: about_pyladies.md  accounts.md  facilitating_events.md  hosting_and_sponsorship.md  social_media.md
_sources/sub_pages/templates/: email_templates.md  meetup_template.md
docs/: _config.yml  _toc.yml  faq.md  intro.md
docs/sub_pages/: coaching.md  facilitating_events.md  giving_a_workshop_or_talk.md  speakers_guide.md  supporting_pyladies.md
docs/sub_pages/templates/: email_templates.md  social_media_templates.md
sub_pages/: about_pyladies.html  accounts.html  coaching.html  conference.html  facilitating_events.html  giving_a_workshop_or_talk.html  hosting_and_sponsorship.html  resources.html  social_media.html  speakers_guide.html  supporting_pyladies.html
sub_pages/templates/: email_templates.html  meetup_template.html  social_media_templates.html
